# Algorithms

./: .gitignore  README.md
AnalysisOfAlgorithms/: Notes.tex  README.md
AnalysisOfAlgorithms/Exercises/: Exercises.tex
Sedgewick/: .gitignore  README.md  build.sbt
Sedgewick/Assignments/src/main/java/: Percolation.java  PercolationStats.java  UnionFind.java
Sedgewick/Graphs/: .gitignore  README.md  build.sbt
Sedgewick/Graphs/src/main/scala/: BasicGraph.scala  DiGraph.scala  Edge.scala  Graph.scala  GraphLike.scala  GraphSearch.scala  MST.scala  MutableGraph.scala  Search.scala  UnionFind.scala  VertexVisitor.scala  WeightedGraph.scala
Sedgewick/Graphs/src/test/scala/: BasicGraphTest.scala  DigraphSearchTest.scala  DigraphTest.scala  GraphSearchTest.scala  GraphTest.scala  MSTTest.scala  MutableGraphTest.scala  SearchTest.scala  UnionFindTest.scala  WeightedGraphTest.scala
Sedgewick/Search/: build.sbt
Sedgewick/Search/src/main/scala/: BST.scala  OrderedTable.scala  RedBlackTree.scala  SymbolTable.scala  UnorderedTable.scala
Sedgewick/Sort/: build.sbt
Sedgewick/project/: build.sbt
SedgewickAssignments/: .gitignore  README.md  pom.xml
SedgewickAssignments/8Puzzle/: .gitignore  Board.java  Solver.java
SedgewickAssignments/Collinear/: .gitignore  Brute.java  Fast.java  Point.java  compile.txt
SedgewickAssignments/KdTree/: .gitignore
SedgewickAssignments/KdTree/src/: DrawKdTree.java  KdTree.java  PointSET.java
SedgewickAssignments/Percolation/: .gitignore  compile.txt
SedgewickAssignments/Queues/: Deque.java  RandomizedQueue.java
SedgewickAssignments/SeamCarving/: .gitignore  kruskalInput.txt
SedgewickAssignments/SeamCarving/src/: MSTQuiz.java  SeamCarver.java
SedgewickAssignments/WordNet/: .gitignore
SedgewickAssignments/WordNet/src/: DigraphQuiz.java  Outcast.java  SAP.java  WordNet.java
SedgewickAssignments/src/sedgewick/assignments/: Percolation.java  TestUnionFind.java  UnionFind.java
SedgewickCoursera/: README.md
SedgewickCoursera/Percolation/: Percolation.java  PercolationStats.java
SedgewickCoursera/Queues/: Subset.java  compile.txt
TAOCP/: .gitignore  README.md
TAOCP/Implementations/: .gitignore  NestedParens.hs  WORKSPACE  gbench.BUILD  gtest.BUILD  pom.xml
TAOCP/Implementations/combinatorics/backtracking/: BUILD  langford.h  langford_test.cc  nqueens_test.cc  nqueens_walker.h
TAOCP/Implementations/combinatorics/c++/: WORKSPACE  benchmark.BUILD  gtest.BUILD  permutations_benchmarks
TAOCP/Implementations/combinatorics/c++/backtracking/bench/: CMakeLists.txt  langford_benchmarks.cc  nqueens_benchmarks.cc
TAOCP/Implementations/combinatorics/c++/backtracking/test/: CMakeLists.txt  langford_test.cc  langford_visitor_test.cc  nqueens_test.cc
TAOCP/Implementations/combinatorics/c++/combinations/: CMakeLists.txt
TAOCP/Implementations/combinatorics/c++/combinations/bench/: CMakeLists.txt  combinations_bench.cc
TAOCP/Implementations/combinatorics/c++/combinations/ext/gbench/: CMakeLists.txt
TAOCP/Implementations/combinatorics/c++/combinations/ext/gtest/: CMakeLists.txt
TAOCP/Implementations/combinatorics/c++/combinations/include/: combinations.h  combinations_chase.h  combinations_gray.h
TAOCP/Implementations/combinatorics/c++/combinations/test/: CMakeLists.txt  combinations_test.cc
TAOCP/Implementations/combinatorics/c++/ntuples/: CMakeLists.txt
TAOCP/Implementations/combinatorics/c++/ntuples/bench/: CMakeLists.txt  gray_bench.cc  grey_bench.cc
TAOCP/Implementations/combinatorics/c++/ntuples/include/: binarygray.h  binarygrey.h  binarygreyiterator.h  looplessgrey.h
TAOCP/Implementations/combinatorics/c++/ntuples/src/: binarygray.cc  binarygrey.cc  binarygreyiterator.cc  gray.cc  looplessgray.cc  looplessgrey.cc
TAOCP/Implementations/combinatorics/c++/ntuples/test/: CMakeLists.txt  gray_test.cc  grey_test.cc
TAOCP/Implementations/combinatorics/c++/permutations/: BUILD  CMakeLists.txt  permutations.h  permutations_benchmarks.cc  permutations_test.cc  permute_examples.cc
TAOCP/Implementations/combinatorics/c++/permutations/bench/: langford_benchmarks.cc  permutations_benchmarks.cc
TAOCP/Implementations/combinatorics/c++/permutations/ext/gbench/: CMakeLists.txt
TAOCP/Implementations/combinatorics/c++/permutations/ext/gtest/: CMakeLists.txt
TAOCP/Implementations/combinatorics/c++/permutations/include/: permutations.h
TAOCP/Implementations/combinatorics/c++/permutations/test/: permutations_test.cc
TAOCP/Implementations/combinatorics/combinations/: BUILD  combinations.h  combinations_bench.cc  combinations_chase.h  combinations_gray.h
TAOCP/Implementations/combinatorics/java/: .gitignore  pom.xml
TAOCP/Implementations/combinatorics/ntuples/: BUILD  gray.h  gray_bench.cc  gray_test.cc  looplessgray.h
TAOCP/Implementations/combinatorics/permutations/: BUILD  permutations.h
TAOCP/Implementations/sat/c/: .gitignore
TAOCP/Implementations/src/: LexicographicPermutations.java
TAOCP/Implementations/src/knuth.permutations/: LexicographicPermutations.java
TAOCP/Implementations/taocp/: .gitignore  Cargo.toml
TAOCP/Implementations/taocp/benches/: combinatoric_benchmark.rs  dancing_benchmark.rs  langford_benchmark.rs  nqueens_benchmark.rs  sudoku_benchmark.rs
TAOCP/Implementations/taocp/src/: lib.rs
TAOCP/Implementations/taocp/src/backtracking/: dancing_langford.rs  dancing_links.rs  dancing_polynominoes.rs  dancing_queens.rs  dancing_sudoku.rs  langford.rs  mod.rs  nqueens.rs  pentominoes_box.rs  sudoku.rs
TAOCP/Implementations/taocp/src/basic_combinations/: combinations.rs  mod.rs  partitions.rs  permutations.rs
TAOCP/Notes/: KnuthFascicle5.tex  KnuthFascicle5a.tex  KnuthFascicle5b.tex  KnuthFascicle6.tex  KnuthFasicle7c.tex  KnuthVolume1.tex  KnuthVolume4.tex  KnuthVolume4a.tex  KnuthVolume4b.tex  KnuthVolume5b.tex
TAOCP/Problems/: KnuthFascicle5.tex  KnuthFascicle5a.tex  KnuthFascicle5b.tex  KnuthFascicle5c.tex  KnuthFascicle6.tex  KnuthVolume1.tex  KnuthVolume4.tex  KnuthVolume4a.tex  KnuthVolume4b.tex
strings/: Cargo.toml
strings/src/: boyer_moore.rs  lib.rs  utils.rs
(+89 files in other folders)
