[package]
name = "taocp"
version = "0.1.0"
edition = "2021"
authors = ["Alex Conley <alexanderconley@gmail.com>"]

[dependencies]

[dev-dependencies]
criterion = "0.4"
claim = "0.5"

[[bench]]
name = "combinatoric_benchmark"
harness = false

[[bench]]
name = "nqueens_benchmark"
harness = false

[[bench]]
name = "langford_benchmark"
harness = false

[[bench]]
name = "sudoku_benchmark"
harness = false
html_reports = true
